fix header alignment on mobile devices

--- a/hoodie/style.css
+++ b/hoodie/style.css
@@ -15,31 +15,40 @@ html {
 
 main h3 {
 	margin-bottom: 0px;
-	font-size: 30px;
+	font-size: 25px;
 }
 
 .mdl-layout__header-row {
 	height: 60px;
 }
 
-
-@media only screen and (min-width: 500px) {
+@media (min-width: 500px) {
 	.mdl-layout__header-row {
 		height: 100px;
 	}
 }
 
-.mdl-layout__header-row h2 {
+#head {
 	margin-bottom: -1px;
 	font-family: Muli;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 3rem;
 }
 
-@media only screen and (min-width: 500px) {
-	.mdl-layout__header-row h2 {
-		font-size: 45px;
+@media (max-width: 600px) {
+	#head {
+		font-size: 2.4rem;
 	}
+}
+
+@media (max-width: 500px) {
+	#head {
+		font-size: 1.5rem;
+	}
+}
+
+.mdl-layout__header-row {
+	padding: 0px 20px;
 }
 
 .mdl-layout__content {
